Checkpoint 6 and 7 Fixes
Hope this works