@@ -17,7 +17,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.stream.Collectors;
 
-// Multi-threaded implementation that divides computation across threads for one full run
 public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
 
     private static final int THREAD_LIMIT = 5;
@@ -25,6 +24,7 @@ public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
 
     @Override
     public ProcessResult processData(ProcessRequest request) {
+
         try {
             if (request == null) {
                 return new ProcessResult(false, "Request cannot be null");
@@ -38,7 +38,7 @@ public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
                 return new ProcessResult(false, "Input file does not exist: " + inputPath);
             }
 
-            // Read input numbers from file
+            // Read input numbers
             List<Integer> inputData = Files.lines(Paths.get(inputPath))
                     .map(String::trim)
                     .filter(s -> !s.isEmpty())
@@ -59,7 +59,7 @@ public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
             ExecutorService executor = Executors.newFixedThreadPool(THREAD_LIMIT);
             List<Future<String>> results = new ArrayList<>();
 
-            // Split computation across multiple threads
+            // Submit tasks
             for (int number : inputData) {
                 results.add(executor.submit(() -> {
                     ComputeRequest computeRequest = () -> number;
@@ -67,26 +67,20 @@ public class DataStorageComputeAPIImpl implements DataStorageComputeAPI {
                     if (!computeResult.isSuccess()) {
                         throw new RuntimeException("Computation failed for " + number);
                     }
-                    String seq = computeResult.getSequence().replace(",", delimiter);
-                    System.out.println("Thread " + Thread.currentThread().getName() + " processed: " + number);
-                    return seq;
+                    return computeResult.getSequence().replace(",", delimiter);
                 }));
             }
 
             // Collect results
-            StringBuilder resultBuilder = new StringBuilder();
+            List<String> outputLines = new ArrayList<>();
             for (Future<String> f : results) {
-                resultBuilder.append(f.get()).append(System.lineSeparator());
+                outputLines.add(f.get());
             }
 
             executor.shutdown();
 
             // Write results to file
-            String finalOutput = resultBuilder.toString().trim() + System.lineSeparator();
-            Files.writeString(Paths.get(outputPath), finalOutput);
-
-            System.out.println("Computation Results:");
-            System.out.print(finalOutput);
+            Files.write(Paths.get(outputPath), outputLines);
 
             return new ProcessResult(true, "Data processed successfully");
 
